# django-portfolio

./: .dockerignore  .editorconfig  .example.env.docker  .example.env.local  .example.env.prod  .gitignore  .readthedocs.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  entrypoint.sh  make.bat  manage.py  nginx.conf  pyproject.toml  requirements-dev.txt  requirements-prod.txt  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_form.yml  config.yml
.github/workflows/: docker-publish.yml  test-coverage-lint-uv.yml
containers/: Containerfile  Makefile  README.md  make.bat
docs/: conf.py  index.html
docs/_ext/: jinja2_rendering.py
docs/gh-pages/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/gh-pages/.doctrees/: environment.pickle  index.doctree
docs/gh-pages/.doctrees/source/: index.doctree
docs/gh-pages/.doctrees/source/code/: modules.doctree  portfolio_app.doctree  portfolio_app.migrations.doctree  portfolio_app.template_tags.doctree  portfolio_blog.doctree  portfolio_blog.migrations.doctree  portfolio_blog.template_tags.doctree  portfolio_project.doctree  portfolio_project.settings.doctree
docs/gh-pages/_modules/: index.html
docs/gh-pages/_modules/portfolio_app/: apps.html  forms.html  utils.html  wordcloud.html
docs/gh-pages/_modules/portfolio_app/template_tags/: markdown_processing.html
docs/gh-pages/_modules/portfolio_blog/: apps.html
docs/gh-pages/_modules/portfolio_blog/template_tags/: markdown_processing.html
docs/gh-pages/_sources/: index.rst.txt
docs/gh-pages/_sources/source/code/: modules.rst.txt  portfolio_app.migrations.rst.txt  portfolio_app.template_tags.rst.txt  portfolio_blog.migrations.rst.txt  portfolio_blog.template_tags.rst.txt
docs/gh-pages/source/: index.html
docs/gh-pages/source/code/: modules.html  portfolio_app.html  portfolio_app.migrations.html  portfolio_app.template_tags.html  portfolio_blog.html  portfolio_blog.migrations.html  portfolio_blog.template_tags.html  portfolio_project.html  portfolio_project.settings.html
docs/source/: index.rst
docs/source/code/: portfolio_app.rst  portfolio_blog.rst  portfolio_project.rst  portfolio_project.settings.rst
portfolio_app/: admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py  wordcloud.py
portfolio_app/migrations/: 0001_initial.py
portfolio_app/template_tags/: markdown_processing.py  tag_cloud.py
portfolio_blog/: admin.py  apps.py  filters.py  forms.py  models.py  urls.py  utils.py  views.py  wordcloud.py
portfolio_blog/migrations/: 0001_initial.py  0002_alter_portfolio_portfolio_img_and_more.py
portfolio_blog/template_tags/: markdown_processing.py  tag_cloud.py
portfolio_project/: asgi.py  settings.py  urls.py  utils.py  wsgi.py
portfolio_project/settings/: base.py  local.py  production.py
scripts/: README.md  factory.py  populate_posts.py  populate_projects.py
static/css/: main.css
templates/base/: 2-col-template.html  3-col-template.html  base.html  footer.html  navbar.html  secondary-navbar.html
templates/portfolio_app/: about.html  project-all-partial.html  project-all.html  project-list-elements.html  project-single.html  resume.html  splash.html  tag-cloud.html
templates/portfolio_blog/: about.html  index.html  portfolio.html  post-list-elements.html  post-single.html  posts-all.html  project-all-partial.html  project-all.html  project-list-elements.html  project-list.html  project-single.html  projects.html  resume.html  splash.html  tag-cloud.html
tests/: conftest.py  factories.py
tests/data/: .test-env  README.md
tests/portfolio_app/: test_admin.py  test_home.py  test_markdown_processing.py  test_models.py  test_utils.py  test_views.py  test_wordcloud.py
tests/portfolio_blog/: test_admin.py  test_factory.py  test_home.py  test_markdown_processing.py  test_models.py  test_utils.py  test_views.py  test_wordcloud.py
